deploy: 54d466224b8c41a3e9eff29b81007817720ccf13

--- a/404.html
+++ b/404.html
@@ -187,7 +187,7 @@
 
 				<!-- Content
 ================================================== -->
-				<div class="main-content">
+				<main class="main-content">
 					<div class="text-center">
 						<h1 class="display-1 mt-5 mb-4">
 							<span class="badge badge-danger">404</span> Page does not exist!
@@ -197,7 +197,7 @@
 							<a href="/">homepage</a>!
 						</p>
 					</div>
-				</div>
+				</main>
 			</div>
 
 			<!-- Categories Jumbotron
@@ -213,7 +213,25 @@
 							</h2>
 						</div>
 					</div>
-					<div class="col-md-8 p-5 align-self-center text-center"></div>
+					<div class="col-md-8 p-5 align-self-center text-center">
+						<a class="mt-1 mb-1" href="/category/beetle">beetle (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/decal">decal (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/graphic">graphic (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/mid-engine">mid-engine (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/mk7">mk7 (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/show">show (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/superbeetle"
+							>superbeetle (8)</a
+						>
+
+						<a class="mt-1 mb-1" href="/category/vw">vw (11)</a>
+					</div>
 				</div>
 			</div>
 
@@ -227,9 +245,8 @@
 						</div>
 						<div class="col-md-6 col-sm-6 text-center text-lg-right">
 							Forked from
-							<a target="_blank" href="https://www.chrishammond.com/"
-								>Chris Hammond</a
-							>'s <a href="https://jekyllexample.com">JekyllExample.com</a>.
+							<a href="https://www.chrishammond.com/">Chris Hammond</a>'s
+							<a href="https://jekyllexample.com">jekyllexample.com</a>.
 						</div>
 					</div>
 				</div>
