--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 
 				<!-- Content
 ================================================== -->
-				<div class="main-content">
+				<main class="main-content">
 					<div class="container">
 						<div class="row">
 							<div class="col-md-2 flex-first flex-md-unordered"></div>
@@ -226,7 +226,7 @@
 							<div class="col-md-2 flex-first flex-md-unordered"></div>
 						</div>
 					</div>
-				</div>
+				</main>
 			</div>
 
 			<!-- Categories Jumbotron
@@ -242,7 +242,25 @@
 							</h2>
 						</div>
 					</div>
-					<div class="col-md-8 p-5 align-self-center text-center"></div>
+					<div class="col-md-8 p-5 align-self-center text-center">
+						<a class="mt-1 mb-1" href="/category/beetle">beetle (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/decal">decal (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/graphic">graphic (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/mid-engine">mid-engine (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/mk7">mk7 (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/show">show (1)</a>
+
+						<a class="mt-1 mb-1" href="/category/superbeetle"
+							>superbeetle (8)</a
+						>
+
+						<a class="mt-1 mb-1" href="/category/vw">vw (11)</a>
+					</div>
 				</div>
 			</div>
 
@@ -256,9 +274,8 @@
 						</div>
 						<div class="col-md-6 col-sm-6 text-center text-lg-right">
 							Forked from
-							<a target="_blank" href="https://www.chrishammond.com/"
-								>Chris Hammond</a
-							>'s <a href="https://jekyllexample.com">JekyllExample.com</a>.
+							<a href="https://www.chrishammond.com/">Chris Hammond</a>'s
+							<a href="https://jekyllexample.com">jekyllexample.com</a>.
 						</div>
 					</div>
 				</div>
