--- a/vwjunkyard.html
+++ b/vwjunkyard.html
@@ -21,20 +21,22 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
-		<title>VeeDub ReDub - ProjectVW.com - 1973 Volkswagen Super Beetle</title>
+		<title>
+			VW Junkyard in Pennsylvania - ProjectVW.com - 1973 Volkswagen Super Beetle
+		</title>
 		<link rel="icon" href="assets/images/logo.jpg" />
 
-		<meta property="og:url" content="https://www.projectvw.com/redub" />
+		<meta property="og:url" content="https://www.projectvw.com/vwjunkyard" />
 		<meta
 			property="og:image"
-			content="https://www.projectvw.com/assets/images_out/2023/redub-1600-bffdd412f.jpg"
+			content="https://www.projectvw.com/assets/images_out/2024/309autosalvage-1600-97c1f08eb.jpg"
 		/>
 
 		<meta property="og:type" content="article" />
 
 		<meta
 			property="og:title"
-			content="VeeDub ReDub - ProjectVW.com - 1973 Volkswagen Super Beetle"
+			content="VW Junkyard in Pennsylvania - ProjectVW.com - 1973 Volkswagen Super Beetle"
 		/>
 
 		<meta
@@ -48,7 +50,7 @@
 		<meta name="twitter:site" content="@projectvw" />
 		<meta
 			name="twitter:title"
-			content="VeeDub ReDub - ProjectVW.com - 1973 Volkswagen Super Beetle"
+			content="VW Junkyard in Pennsylvania - ProjectVW.com - 1973 Volkswagen Super Beetle"
 		/>
 		<meta
 			name="twitter:description"
@@ -56,14 +58,11 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="https://www.projectvw.com/assets/images_out/2023/redub-1600-bffdd412f.jpg"
+			content="https://www.projectvw.com/assets/images_out/2024/309autosalvage-1600-97c1f08eb.jpg"
 		/>
 
-		<meta
-			name="keywords"
-			content="vw, beetle, mid-engine, mk7, golf, gti, doyle, motorworks"
-		/>
-		<link rel="canonical" href="https://www.projectvw.com/redub" />
+		<meta name="keywords" content="vw, bus, beetle, bug, junkyard" />
+		<link rel="canonical" href="https://www.projectvw.com/vwjunkyard" />
 
 		<link
 			rel="stylesheet"
@@ -209,7 +208,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://twitter.com/intent/tweet?text=VeeDub ReDub&url=https://www.projectvw.com/redub"
+												href="https://twitter.com/intent/tweet?text=VW Junkyard in Pennsylvania&url=https://www.projectvw.com/vwjunkyard"
 												onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"
 											>
 												<i class="fab fa-twitter"></i>
@@ -219,7 +218,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://facebook.com/sharer.php?u=https://www.projectvw.com/redub"
+												href="https://facebook.com/sharer.php?u=https://www.projectvw.com/vwjunkyard"
 												onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;"
 											>
 												<i class="fab fa-facebook-f"></i>
@@ -229,7 +228,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.projectvw.com/redub"
+												href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.projectvw.com/vwjunkyard"
 												onclick="window.open(this.href, 'width=550,height=435');return false;"
 											>
 												<i class="fab fa-linkedin-in"></i>
@@ -247,7 +246,7 @@
 										<header>
 											<!-- Post Title -->
 											<h1 class="posttitle" itemprop="headline">
-												VeeDub ReDub
+												VW Junkyard in Pennsylvania
 											</h1>
 
 											<!-- Post Date -->
@@ -299,14 +298,14 @@
 
 									<img
 										class="featured-image img-fluid lazyimg"
-										src="/assets/images_out/2023/redub-800-bffdd412f.jpg"
-										alt="VeeDub ReDub"
+										src="/assets/images_out/2024/309autosalvage-800-97c1f08eb.jpg"
+										alt="VW Junkyard in Pennsylvania"
 										srcset="
-											/assets/images_out/2023/redub-200-bffdd412f.jpg   200w,
-											/assets/images_out/2023/redub-400-bffdd412f.jpg   400w,
-											/assets/images_out/2023/redub-800-bffdd412f.jpg   800w,
-											/assets/images_out/2023/redub-1600-bffdd412f.jpg 1600w,
-											/assets/images_out/2023/redub-2000-bffdd412f.jpg 2000w
+											/assets/images_out/2024/309autosalvage-200-97c1f08eb.jpg   200w,
+											/assets/images_out/2024/309autosalvage-400-97c1f08eb.jpg   400w,
+											/assets/images_out/2024/309autosalvage-800-97c1f08eb.jpg   800w,
+											/assets/images_out/2024/309autosalvage-1600-97c1f08eb.jpg 1600w,
+											/assets/images_out/2024/309autosalvage-1984-97c1f08eb.jpg 1984w
 										"
 									/>
 
@@ -317,15 +316,25 @@
 										<!-- Toc if any -->
 
 										<!-- End Toc -->
-										<p>
-											This is one of the cleanest looking projects I’ve ever
-											seen. A MK7 powered mid-engine VW Beetle. I can’t wait to
-											see this thing in action.
-										</p>
+										<p>Check out this VW Graveyard out in Pennsylvania</p>
+
+										<iframe
+											width="560"
+											height="315"
+											src="https://www.youtube.com/embed/uTisc3u8sJ8?si=5GkTFNnEwJean8pv"
+											title="YouTube video player"
+											frameborder="0"
+											allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+											referrerpolicy="strict-origin-when-cross-origin"
+											allowfullscreen=""
+										></iframe>
 
 										<p>
-											<a href="https://www.doylemw.com/"
-												>From Doyle Motorworks</a
+											Apparently this place is trying to liquidate all their
+											VWs, $300/bug!
+											<a
+												href="https://www.facebook.com/profile.php?id=61552496365695"
+												>Check out their Facebook page</a
 											>
 										</p>
 									</div>
@@ -384,16 +393,8 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/mid-engine"
-													>mid-engine</a
-												>
-											</li>
-
-											<li>
-												<a
-													class="smoothscroll btn-secondary"
-													href="/category/mk7"
-													>mk7</a
+													href="/category/beetle"
+													>beetle</a
 												>
 											</li>
 
@@ -418,18 +419,9 @@
 									<div
 										class="row PageNavigation d-flex justify-content-between font-weight-bold"
 									>
-										<a
-											class="prev d-block col-md-6"
-											href="/vw-chassis-number-133-2543-365"
+										<a class="prev d-block col-md-6" href="/redub">
+											&laquo; VeeDub ReDub</a
 										>
-											&laquo; 1973 VW Super Beetle 133 2543 365</a
-										>
-
-										<a
-											class="next d-block col-md-6 text-lg-right"
-											href="/vwjunkyard"
-											>VW Junkyard in Pennsylvania &raquo;
-										</a>
 
 										<div class="clearfix"></div>
 									</div>
