--- a/tags.html
+++ b/tags.html
@@ -1,275 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<!-- Google tag (gtag.js) -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=G-5V10Z3380G"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag("js", new Date());
-
-			gtag("config", "G-5V10Z3380G");
-		</script>
-
-		<meta charset="utf-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
-		/>
-		<title>Tags - ProjectVW.com - 1973 Volkswagen Super Beetle</title>
-		<link rel="icon" href="assets/images/logo.jpg" />
-
-		<meta property="og:url" content="https://www.projectvw.com/tags" />
-		<meta property="og:image" content="https://www.projectvw.com" />
-
-		<meta property="og:type" content="article" />
-
-		<meta
-			property="og:title"
-			content="Tags - ProjectVW.com - 1973 Volkswagen Super Beetle"
-		/>
-
-		<meta
-			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
-		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
-
-		<!-- Twitter Card data -->
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:site" content="@" />
-		<meta
-			name="twitter:title"
-			content="Tags - ProjectVW.com - 1973 Volkswagen Super Beetle"
-		/>
-		<meta
-			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
-		/>
-		<meta name="twitter:image" content="https://www.projectvw.com" />
-
-		<meta name="keywords" content="" />
-		<link rel="canonical" href="https://www.projectvw.com/tags" />
-
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-			integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-			crossorigin="anonymous"
-		/>
-
-		<link href="/assets/css/screen.css" rel="stylesheet" />
-
-		<link href="/assets/css/main.css" rel="stylesheet" />
-
-		<script src="/assets/js/jquery.min.js"></script>
-	</head>
-
-	<body class="layout-tags">
-		<!-- defer loading of font and font awesome -->
-		<noscript id="deferred-styles">
-			<link
-				href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i"
-				rel="stylesheet"
-			/>
-			<link
-				rel="stylesheet"
-				href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
-				integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
-				crossorigin="anonymous"
-			/>
-		</noscript>
-
-		<!-- Begin Menu Navigation
-================================================== -->
-		<nav
-			class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down"
-		>
-			<div class="container pr-0">
-				<!-- Begin Logo -->
-				<a class="navbar-brand" href="/">
-					<img src="/assets/images/logo.jpg" alt="ProjectVW.com" />
-				</a>
-				<!-- End Logo -->
-
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarMediumish"
-					aria-controls="navbarSupportedContent"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					<span class="navbar-toggler-icon"></span>
-				</button>
-
-				<div class="collapse navbar-collapse" id="navbarMediumish">
-					<!-- Begin Menu -->
-
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item">
-							<a class="nav-link" href="/index.html">Home</a>
-						</li>
-
-						<li class="nav-item">
-							<a class="nav-link" href="/about">About</a>
-						</li>
-
-						<script src="/assets/js/lunr.js"></script>
-
-						<style>
-							.lunrsearchresult .title {
-								color: #d9230f;
-							}
-							.lunrsearchresult .url {
-								color: silver;
-							}
-							.lunrsearchresult a {
-								display: block;
-								color: #777;
-							}
-							.lunrsearchresult a:hover,
-							.lunrsearchresult a:focus {
-								text-decoration: none;
-							}
-							.lunrsearchresult a:hover .title {
-								text-decoration: underline;
-							}
-						</style>
-
-						<form
-							class="bd-search"
-							onSubmit="return lunr_search(document.getElementById('lunrsearch').value);"
-						>
-							<input
-								type="text"
-								class="form-control text-small launch-modal-search"
-								id="lunrsearch"
-								name="q"
-								maxlength="255"
-								value=""
-								placeholder="Type and enter..."
-							/>
-						</form>
-
-						<div id="lunrsearchresults">
-							<ul></ul>
-						</div>
-
-						<script src="/assets/js/lunrsearchengine.js"></script>
-					</ul>
-
-					<!-- End Menu -->
-				</div>
-			</div>
-		</nav>
-		<!-- End Navigation
-================================================== -->
-
-		<div class="site-content">
-			<div class="container">
-				<!-- Site Title
-================================================== -->
-				<!--
-<div class="mainheading">
-    <h1 class="sitetitle">ProjectVW.com</h1>
-    <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
-    </p>
-</div>
--->
-
-				<!-- Content
-================================================== -->
-				<main class="main-content">
-					<div class="row listrecent"></div>
-				</main>
-			</div>
-
-			<!-- Categories Jumbotron
-================================================== -->
-			<div class="jumbotron fortags">
-				<div class="d-md-flex h-100">
-					<div class="col-md-4 transpdark align-self-center text-center h-100">
-						<div
-							class="d-md-flex align-items-center justify-content-center h-100"
-						>
-							<h2 class="d-md-block align-self-center py-1 font-weight-light">
-								Explore <span class="d-none d-md-inline">→</span>
-							</h2>
-						</div>
-					</div>
-					<div class="col-md-8 p-5 align-self-center text-center">
-						<a class="mt-1 mb-1" href="/category/beetle">beetle (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/decal">decal (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/graphic">graphic (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/mid-engine">mid-engine (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/mk7">mk7 (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/show">show (1)</a>
-
-						<a class="mt-1 mb-1" href="/category/superbeetle"
-							>superbeetle (8)</a
-						>
-
-						<a class="mt-1 mb-1" href="/category/vw">vw (11)</a>
-					</div>
-				</div>
-			</div>
-
-			<!-- Begin Footer
-================================================== -->
-			<footer class="footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-sm-6 text-center text-lg-left">
-							Copyright © 2024 ProjectVW.com
-						</div>
-						<div class="col-md-6 col-sm-6 text-center text-lg-right">
-							Forked from
-							<a href="https://www.chrishammond.com/">Chris Hammond</a>'s
-							<a href="https://jekyllexample.com">jekyllexample.com</a>.
-						</div>
-					</div>
-				</div>
-			</footer>
-			<!-- End Footer
-================================================== -->
-		</div>
-		<!-- /.site-content -->
-
-		<!-- Scripts
-================================================== -->
-
-		<script
-			src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-			integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-			crossorigin="anonymous"
-		></script>
-
-		<script
-			src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-			crossorigin="anonymous"
-		></script>
-
-		<script src="/assets/js/mediumish.js"></script>
-
-		<script src="/assets/js/ie10-viewport-bug-workaround.js"></script>
-	</body>
+<html lang="en-US">
+	<meta charset="utf-8" />
+	<title>Redirecting&hellip;</title>
+	<link rel="canonical" href="https://www.projectvw.com/category" />
+	<script>
+		location = "https://www.projectvw.com/category";
+	</script>
+	<meta
+		http-equiv="refresh"
+		content="0; url=https://www.projectvw.com/category"
+	/>
+	<h1>Redirecting&hellip;</h1>
+	<a href="https://www.projectvw.com/category"
+		>Click here if you are not redirected.</a
+	>
 </html>
