deploy: aebf939a6a2af73a58e653222a359ae98b36addf

--- a/category.html
+++ b/category.html
@@ -1167,7 +1167,7 @@
 							<div class="card h-100">
 								<div class="maxthumb">
 									<a
-										href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+										href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 									>
 										<img
 											class="img-fluid"
@@ -1185,14 +1185,14 @@
 									<h2 class="card-title">
 										<a
 											class="text-dark"
-											href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+											href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 											>Have you seen my 1973 VW Super Beetle? VIN# 1332543365</a
 										>
 									</h2>
 									<h4 class="card-text">
 										When I was 17, and my brother was 16, my parents bought us a
 										car. It was a 1973 VW Super Beetle (Vin/Chassis #
-										1332543365), honestly I didn&#39;t want it,...
+										1332543365). Honestly, I didn’t want it....
 									</h4>
 								</div>
 								<div class="card-footer bg-white">
@@ -1216,7 +1216,7 @@
 
 										<span class="post-read-more"
 											><a
-												href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+												href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 												title="Read Story"
 												><svg
 													class="svgIcon-use"
@@ -1950,7 +1950,7 @@
 							<div class="card h-100">
 								<div class="maxthumb">
 									<a
-										href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+										href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 									>
 										<img
 											class="img-fluid"
@@ -1968,14 +1968,14 @@
 									<h2 class="card-title">
 										<a
 											class="text-dark"
-											href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+											href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 											>Have you seen my 1973 VW Super Beetle? VIN# 1332543365</a
 										>
 									</h2>
 									<h4 class="card-text">
 										When I was 17, and my brother was 16, my parents bought us a
 										car. It was a 1973 VW Super Beetle (Vin/Chassis #
-										1332543365), honestly I didn&#39;t want it,...
+										1332543365). Honestly, I didn’t want it....
 									</h4>
 								</div>
 								<div class="card-footer bg-white">
@@ -1999,7 +1999,7 @@
 
 										<span class="post-read-more"
 											><a
-												href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
+												href="/have-you-seen-my-1973-vw-super-beetle-vin-1332543365"
 												title="Read Story"
 												><svg
 													class="svgIcon-use"
