deploy: b5315c715fd5f915c4f491772345b40788c87de8

--- a/vwjunkyard.html
+++ b/vwjunkyard.html
@@ -41,9 +41,12 @@
 
 		<meta
 			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="A video from a VW Junkyard in Pennsylvania, I went through this video looking for my old car"
 		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
+		<meta
+			name="description"
+			content="A video from a VW Junkyard in Pennsylvania, I went through this video looking for my old car"
+		/>
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -54,7 +57,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="A video from a VW Junkyard in Pennsylvania, I went through this video looking for my old car"
 		/>
 		<meta
 			name="twitter:image"
