deploy: 7ecafbff94c4adb404fe4945d90cdc8d978f35ab

--- a/1973-volkswagen-super-beetle-red.html
+++ b/1973-volkswagen-super-beetle-red.html
@@ -605,7 +605,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -613,7 +613,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
