--- a/1973-vw-super-beetle-wide-fenders.html
+++ b/1973-vw-super-beetle-wide-fenders.html
@@ -441,7 +441,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -449,7 +449,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
