--- a/category.html
+++ b/category.html
@@ -194,7 +194,7 @@
 							<h2 id="beetle">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/beetle">beetle</a></span
+									><a href="/category/beetle/">beetle</a></span
 								>
 							</h2>
 						</div>
@@ -272,7 +272,7 @@
 							<h2 id="decal">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/decal">decal</a></span
+									><a href="/category/decal/">decal</a></span
 								>
 							</h2>
 						</div>
@@ -351,7 +351,7 @@
 							<h2 id="graphic">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/graphic">graphic</a></span
+									><a href="/category/graphic/">graphic</a></span
 								>
 							</h2>
 						</div>
@@ -430,7 +430,7 @@
 							<h2 id="mid-engine">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/mid-engine">mid-engine</a></span
+									><a href="/category/mid-engine/">mid-engine</a></span
 								>
 							</h2>
 						</div>
@@ -508,7 +508,7 @@
 							<h2 id="mk7">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/mk7">mk7</a></span
+									><a href="/category/mk7/">mk7</a></span
 								>
 							</h2>
 						</div>
@@ -586,7 +586,7 @@
 							<h2 id="show">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/show">show</a></span
+									><a href="/category/show/">show</a></span
 								>
 							</h2>
 						</div>
@@ -665,7 +665,7 @@
 							<h2 id="superbeetle">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/superbeetle">superbeetle</a></span
+									><a href="/category/superbeetle/">superbeetle</a></span
 								>
 							</h2>
 						</div>
@@ -1240,7 +1240,7 @@
 							<h2 id="vw">
 								Category
 								<span class="text-capitalize"
-									><a href="/category/vw">vw</a></span
+									><a href="/category/vw/">vw</a></span
 								>
 							</h2>
 						</div>
