--- a/find-my-first-car.html
+++ b/find-my-first-car.html
@@ -398,7 +398,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -406,7 +406,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
