--- a/redub.html
+++ b/redub.html
@@ -384,7 +384,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/mid-engine"
+													href="/category/mid-engine/"
 													>mid-engine</a
 												>
 											</li>
@@ -392,7 +392,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/mk7"
+													href="/category/mk7/"
 													>mk7</a
 												>
 											</li>
@@ -400,7 +400,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
