--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -502,7 +502,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/show"
+													href="/category/show/"
 													>show</a
 												>
 											</li>
@@ -510,7 +510,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -518,7 +518,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
