--- a/vw-jacked-up.html
+++ b/vw-jacked-up.html
@@ -387,7 +387,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/decal"
+													href="/category/decal/"
 													>decal</a
 												>
 											</li>
@@ -395,7 +395,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/graphic"
+													href="/category/graphic/"
 													>graphic</a
 												>
 											</li>
@@ -403,7 +403,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
