--- a/vwjunkyard.html
+++ b/vwjunkyard.html
@@ -396,7 +396,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/beetle"
+													href="/category/beetle/"
 													>beetle</a
 												>
 											</li>
@@ -404,7 +404,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
