--- a/wide-super-beetle.html
+++ b/wide-super-beetle.html
@@ -428,7 +428,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -436,7 +436,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
