--- a/driving-to-graduation.html
+++ b/driving-to-graduation.html
@@ -406,7 +406,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/superbeetle"
+													href="/category/superbeetle/"
 													>superbeetle</a
 												>
 											</li>
@@ -414,7 +414,7 @@
 											<li>
 												<a
 													class="smoothscroll btn-secondary"
-													href="/category/vw"
+													href="/category/vw/"
 													>vw</a
 												>
 											</li>
