--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -43,11 +43,8 @@
 			content="1973 VW Super Beetle 133 2543 365 - ProjectVW.com - 1973 Volkswagen Super Beetle"
 		/>
 
-		<meta
-			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
-		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
+		<meta property="og:description" content="" />
+		<meta name="description" content="" />
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
