deploy: 2fa92e73639ec3a07ebd0b765a77607aabb0efec

--- a/vwjunkyard.html
+++ b/vwjunkyard.html
@@ -446,6 +446,13 @@
 											&laquo; VeeDub ReDub</a
 										>
 
+										<a
+											class="next d-block col-md-6 text-lg-right"
+											href="/findmyfirstcar"
+											>The Hunt for My 1973 VW Super Beetle: A Quest Across
+											States and Years &raquo;
+										</a>
+
 										<div class="clearfix"></div>
 									</div>
 									<!-- End Categories -->
@@ -483,7 +490,7 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						</div>
 					</div>
 					<div class="col-md-8 p-5 align-self-center text-center">
-						<a class="mt-1 mb-1" href="/category/beetle">beetle (1)</a>
+						<a class="mt-1 mb-1" href="/category/beetle">beetle (2)</a>
 
 						<a class="mt-1 mb-1" href="/category/decal">decal (1)</a>
 
@@ -499,7 +506,7 @@ https://search.google.com/structured-data/testing-tool/u/0/
 							>superbeetle (8)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw">vw (11)</a>
+						<a class="mt-1 mb-1" href="/category/vw">vw (12)</a>
 					</div>
 				</div>
 			</div>
