deploy: d0c4f1370ed7a499d10f4978bf27259550355819

--- a/find-my-vw.html
+++ b/find-my-vw.html
@@ -507,23 +507,23 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						</div>
 					</div>
 					<div class="col-md-8 p-5 align-self-center text-center">
-						<a class="mt-1 mb-1" href="/category/beetle">beetle (2)</a>
+						<a class="mt-1 mb-1" href="/category/beetle/">beetle (2)</a>
 
-						<a class="mt-1 mb-1" href="/category/decal">decal (1)</a>
+						<a class="mt-1 mb-1" href="/category/decal/">decal (1)</a>
 
-						<a class="mt-1 mb-1" href="/category/graphic">graphic (1)</a>
+						<a class="mt-1 mb-1" href="/category/graphic/">graphic (1)</a>
 
-						<a class="mt-1 mb-1" href="/category/mid-engine">mid-engine (1)</a>
+						<a class="mt-1 mb-1" href="/category/mid-engine/">mid-engine (1)</a>
 
-						<a class="mt-1 mb-1" href="/category/mk7">mk7 (1)</a>
+						<a class="mt-1 mb-1" href="/category/mk7/">mk7 (1)</a>
 
-						<a class="mt-1 mb-1" href="/category/show">show (1)</a>
+						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
-						<a class="mt-1 mb-1" href="/category/superbeetle"
+						<a class="mt-1 mb-1" href="/category/superbeetle/"
 							>superbeetle (8)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
 					</div>
 				</div>
 			</div>
