deploy: bd5817824cdbdf2ebfd8a257bd2af0b84bd7eda3

--- a/driving-to-graduation.html
+++ b/driving-to-graduation.html
@@ -221,7 +221,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -461,8 +461,8 @@
 
 										<a
 											class="next d-block col-md-6 text-lg-right"
-											href="/wide-super-beetle"
-											>1973 Volkswagen Wide Super Beetle &raquo;
+											href="/find-my-vw"
+											>Help me find my VW Super Beetle &raquo;
 										</a>
 
 										<div class="clearfix"></div>
@@ -515,10 +515,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
