--- a/find-my-first-car.html
+++ b/find-my-first-car.html
@@ -44,9 +44,12 @@
 
 		<meta
 			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="Some details about my 1973 Super Beetle to help me find my first car!"
 		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
+		<meta
+			name="description"
+			content="Some details about my 1973 Super Beetle to help me find my first car!"
+		/>
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -57,7 +60,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="Some details about my 1973 Super Beetle to help me find my first car!"
 		/>
 		<meta
 			name="twitter:image"
@@ -214,7 +217,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -504,10 +507,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
