--- a/find-my-vw.html
+++ b/find-my-vw.html
@@ -215,7 +215,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -460,8 +460,12 @@
 									<div
 										class="row PageNavigation d-flex justify-content-between font-weight-bold"
 									>
-										<a class="prev d-block col-md-6" href="/wide-super-beetle">
-											&laquo; 1973 Volkswagen Wide Super Beetle</a
+										<a
+											class="prev d-block col-md-6"
+											href="/driving-to-graduation"
+										>
+											&laquo; 1973 Volkswagen Super Beetle Driving to
+											Graduation</a
 										>
 
 										<a
@@ -520,10 +524,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
