--- a/redub.html
+++ b/redub.html
@@ -39,9 +39,12 @@
 
 		<meta
 			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="A simple blog post on a MK7 powered VW Beetle"
 		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
+		<meta
+			name="description"
+			content="A simple blog post on a MK7 powered VW Beetle"
+		/>
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -52,7 +55,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="A simple blog post on a MK7 powered VW Beetle"
 		/>
 		<meta
 			name="twitter:image"
@@ -209,7 +212,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -501,10 +504,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
