--- a/findmyfirstcar.html
+++ b/findmyfirstcar.html
@@ -218,7 +218,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -478,6 +478,13 @@
 											&laquo; VW Junkyard in Pennsylvania</a
 										>
 
+										<a
+											class="next d-block col-md-6 text-lg-right"
+											href="/2022-02-01-Wide-Super-Beetle/"
+										>
+											&raquo;
+										</a>
+
 										<div class="clearfix"></div>
 									</div>
 									<!-- End Categories -->
@@ -528,10 +535,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
