--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -43,8 +43,14 @@
 			content="1973 VW Super Beetle 133 2543 365 - ProjectVW.com - 1973 Volkswagen Super Beetle"
 		/>
 
-		<meta property="og:description" content="" />
-		<meta name="description" content="" />
+		<meta
+			property="og:description"
+			content="Some details around super beetles and their various options"
+		/>
+		<meta
+			name="description"
+			content="Some details around super beetles and their various options"
+		/>
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -55,7 +61,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="Some details around super beetles and their various options"
 		/>
 		<meta
 			name="twitter:image"
@@ -215,7 +221,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
@@ -611,10 +617,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (8)</a
+							>superbeetle (7)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
 					</div>
 				</div>
 			</div>
