deploy: 134b1219eca794da57e7a5efc90062f7988de3e4

--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -70,7 +70,7 @@
 
 		<meta
 			name="keywords"
-			content="vw, beetle, super beetle, 1973, 133 2543 365, show, carshow"
+			content="vw, beetle, super beetle, 1973, 133 2543 365"
 		/>
 		<link
 			rel="canonical"
