deploy: 165eb8859a3027452bbc4b7733c393f0aedf84ae

--- a/find-my-vw.html
+++ b/find-my-vw.html
@@ -460,12 +460,8 @@
 									<div
 										class="row PageNavigation d-flex justify-content-between font-weight-bold"
 									>
-										<a
-											class="prev d-block col-md-6"
-											href="/driving-to-graduation"
-										>
-											&laquo; 1973 Volkswagen Super Beetle Driving to
-											Graduation</a
+										<a class="prev d-block col-md-6" href="/wide-super-beetle">
+											&laquo; 1973 Volkswagen Wide Super Beetle</a
 										>
 
 										<a
@@ -524,10 +520,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (7)</a
+							>superbeetle (8)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
 					</div>
 				</div>
 			</div>
