--- a/wide-super-beetle.html
+++ b/wide-super-beetle.html
@@ -45,9 +45,12 @@
 
 		<meta
 			property="og:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="Some information on the 2 inch and 3 inch wider fenders that were added to our 1973 VW Superbeetle"
 		/>
-		<meta name="description" content="Have you seen my 1973 VW Super Beetle?" />
+		<meta
+			name="description"
+			content="Some information on the 2 inch and 3 inch wider fenders that were added to our 1973 VW Superbeetle"
+		/>
 
 		<!-- Twitter Card data -->
 		<meta name="twitter:card" content="summary_large_image" />
@@ -58,7 +61,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Have you seen my 1973 VW Super Beetle?"
+			content="Some information on the 2 inch and 3 inch wider fenders that were added to our 1973 VW Superbeetle"
 		/>
 		<meta
 			name="twitter:image"
@@ -215,7 +218,7 @@
 <div class="mainheading">
     <h1 class="sitetitle">ProjectVW.com</h1>
     <p class="lead">
-        Have you seen my 1973 VW Super Beetle?
+        Have you seen my 1973 VW Super Beetle? I am on the hunt and could use your help!
     </p>
 </div>
 -->
