--- a/driving-to-graduation.html
+++ b/driving-to-graduation.html
@@ -461,8 +461,8 @@
 
 										<a
 											class="next d-block col-md-6 text-lg-right"
-											href="/find-my-vw"
-											>Help me find my VW Super Beetle &raquo;
+											href="/wide-super-beetle"
+											>1973 Volkswagen Wide Super Beetle &raquo;
 										</a>
 
 										<div class="clearfix"></div>
@@ -515,10 +515,10 @@ https://search.google.com/structured-data/testing-tool/u/0/
 						<a class="mt-1 mb-1" href="/category/show/">show (1)</a>
 
 						<a class="mt-1 mb-1" href="/category/superbeetle/"
-							>superbeetle (7)</a
+							>superbeetle (8)</a
 						>
 
-						<a class="mt-1 mb-1" href="/category/vw/">vw (11)</a>
+						<a class="mt-1 mb-1" href="/category/vw/">vw (12)</a>
 					</div>
 				</div>
 			</div>
